--- a/arch/arm/configs/lineageos_nicklaus_defconfig
+++ b/arch/arm/configs/lineageos_nicklaus_defconfig
@@ -589,6 +589,41 @@ CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_FS_XATTR=y
 CONFIG_LCT_CLOSE_HEADPHONE_PA=y
 CONFIG_MTK_MD_SBP_CUSTOM_VALUE=0
+# END IKANGEROW-2471
+# disable all Debugs options
+# CONFIG_IRQ_DOMAIN_DEBUG is not set
+# CONFIG_CGROUP_DEBUG is not set
+# CONFIG_HAVE_DMA_API_DEBUG is not set
+# CONFIG_DEBUG_RODATA is not set
+# CONFIG_ZRAM_DEBUG is not set
+# CONFIG_MTK_CPU_HOTPLUG_DEBUG_0 is not set
+# CONFIG_MTK_CPU_HOTPLUG_DEBUG_2 is not set
+# CONFIG_MTK_CPU_HOTPLUG_DEBUG_3 is not set
+# CONFIG_MTK_DEBUG_LATCH is not set
+# CONFIG_MICROTRUST_DEBUG is not set
+# CONFIG_SND_DEBUG is not set
+# CONFIG_SND_DEBUG_VERBOSE is not set
+# CONFIG_MTK_IRQ_NEW_DESIGN_DEBUG is not set
+# CONFIG_HAVE_DEBUG_KMEMLEAK is not set
+# CONFIG_SCHED_DEBUG is not set
+# CONFIG_DEBUG_PREEMPT is not set
+# 
+#add by longcheer liuzhenhe for led
 CONFIG_LCT_CHARGER_GREEN_LED=y
 CONFIG_LCT_FUNC_GREEN_LED=y
 CONFIG_LCT_THERMAL_BACKLIGHT=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
+CONFIG_NET_UDP_TUNNEL=y
+CONFIG_L2TP=y
+CONFIG_PPPOL2TP=y
+CONFIG_SLIP=y
+CONFIG_SLIP_COMPRESSED=y
+CONFIG_SLIP_MODE_SLIP6=y
+# USB_FASTCHARGE
+CONFIG_FORCE_FAST_CHARGE=y
+
+# Enable binder devices
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder" 
+CONFIG_ANDROID_BINDER_IPC_32BIT=y
+
