--- a/arch/arm/configs/nicklaus_defconfig
+++ b/arch/arm/configs/nicklaus_defconfig
@@ -250,6 +250,7 @@ CONFIG_MTK_COMBO_GPS=y
 CONFIG_MTK_COMBO_WIFI=y
 CONFIG_MTK_PASSPOINT_R1_SUPPORT=y
 CONFIG_MTK_GPS_SUPPORT=y
+CONFIG_MTK_COMBO_AOSP_TETHERING_SUPPORT=y
 CONFIG_MTK_FMRADIO=y
 CONFIG_MTK_FM_CHIP="MT6625_FM"
 CONFIG_MTK_ECCCI_DRIVER=y
