--- a/drivers/misc/mediatek/connectivity/Kconfig
+++ b/drivers/misc/mediatek/connectivity/Kconfig
@@ -364,3 +364,7 @@ config LCT_OPEN_WIFI_40MHZ
 	help
 		This config is used to control WIFI bandrate
 		for 40MHz
+
+config MTK_COMBO_AOSP_TETHERING_SUPPORT
+	bool "Multiplex wlan0 for both AP and STA"
+	default n
